# libjsc

./: CMakeLists.txt  DEPENDENCIES  Makefile  build.sh  test.cc
patches/webkit/: 0001-Force-disable-ENABLE_API_TESTS.patch  0002-Adjust-CMAKE_MODULE_PATH.patch  0003-Do-not-assume-the-Windows-event-loop-on-WTF.patch  0004-Include-Win32Handle.cpp-on-JSCOnly.patch
